--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="header-logo">
-    <%= link_to image_tag("logo_b.png", alt: "Logo TheBergerie"), 'http://thebergerie.net/' %>
+    <%= link_to image_tag("logo_b.png", class: "logo", alt: "Logo TheBergerie"), 'http://thebergerie.net/' %>
     <h1 class="site-title">The Bergerie</h1>
     <h2 class="site-description">Le meilleur de l'élevage pop-culturel!</h2>
   </div>
@@ -8,10 +8,11 @@
     <div class="header-social">
       <ul class="header-list social-list">
         <li><a href="#">Suivez-nous!</a></li>
-        <li><a href="#">Actualité</a></li>
-        <li><a href="#">Art/Culture</a></li>
-        <li><a href="#">Cinéma</a></li>
-        <li><a href="#">Musique</a></li>
+        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="#"><i class="fab fa-tumblr"></i></a></li>
+        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
       </ul>
     </div>
     <!--<div class="header-nav">-->
