--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,19 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"> 
   </head>
 
   <body>
     <div class="global-header">
       <%= render 'layouts/header' %>
     </div>
-      <div id="<%= params[:controller].parameterize %>">
-        <%= yield %>
+    <div id="<%= params[:controller].parameterize %>">
+      <%= yield %>
+      <div class="global-footer">
+        <%= render 'layouts/footer' %>
       </div>
-    <%= render 'layouts/footer' %>
+    </div>
   </body>
 </html>
