--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -26,6 +26,10 @@ $inconsolata-font: 'Inconsolata', helvetica, serif;
   min-height: 74vh;
 }
 
+.content-container {
+  min-height: 74vh;
+}
+
 .global-footer {
   width: 100%;
   height: 12vh;
