--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <%= render 'layouts/header' %>
     </div>
     <div id="<%= params[:controller].parameterize %>">
-      <div class="content-container">
+      <div class="body-container">
         <%= yield %>
       </div>
       <div class="global-footer">
