--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -121,7 +121,7 @@
 .footer {
   background-color: $purple-color;
   height: 100%;
-  width: 70vw;
+  width: 70%;
   margin: auto;
   padding: 0 20px;
   display: flex;
