--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -12,6 +12,9 @@
   <%= f.label :category %>
   <%= f.text_field :category %>
 
+  <%= f.label :preview %>
+  <%= f.text_field :preview %>
+
   <%= f.label :content %>
   <%= f.text_field :content %>
 
