--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -6,7 +6,10 @@
   <%= f.text_field :title %>
 
   <%= f.label :category %>
-  <%= f.text_field :category %>
+  <%= f.select(:category, options_for_select(["Actualité","Art/Culture","Cinema","Musique"])) %>
+
+  <%= f.label :preview %>
+  <%= f.text_field :preview %>
 
   <%= f.label :content %>
   <%= f.text_field :content %>
