--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "") %>
-<div class="posts-global-wrapper">
+<div class="posts-home-wrapper">
   <h1>THE BERGERIE</h1>
   <span> Le meilleur de l'élevage pop-culturel! </br> Depuis 2015 </span>
   <div class="index-posts-wrapper">
