--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,22 +8,22 @@
     <div class="header-social">
       <ul class="header-list social-list">
         <li><a href="#">Suivez-nous!</a></li>
-        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-        <li><a href="#"><i class="fab fa-tumblr"></i></a></li>
-        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+        <li><a href="https://www.facebook.com/thebergerie.net"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href="https://twitter.com/thebergerie"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="https://instagram.com/thebergerie"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="http://thebergerie.tumblr.com/"><i class="fab fa-tumblr"></i></a></li>
+        <li><a href="https://www.youtube.com/channel/UCz00sjGIwWCRbsVdf5Lcrtg"><i class="fab fa-youtube"></i></a></li>
       </ul>
     </div>
     <!--<div class="header-nav">-->
       <nav class="header-nav">
         <ul class="header-list nav-list">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Actualité</a></li>
-          <li><a href="#">Art/Culture</a></li>
-          <li><a href="#">Cinéma</a></li>
-          <li><a href="#">Musique</a></li>
-          <li><a href="#">À propos</a></li>
+          <li> <%= link_to "Home", static_pages_home_path %></li>
+          <li> <%= link_to "Actualité", static_pages_news_path %></li>
+          <li> <%= link_to "Art/Culture", static_pages_art_culture_path %></li>
+          <li> <%= link_to "Cinéma", static_pages_cinema_path %></li>
+          <li> <%= link_to "Musique", static_pages_music_path %></li>
+          <li> <%= link_to "A propos", static_pages_about_path %></li>
         </ul>
       </nav>
     </div>
