--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="posts-global-wrapper">
+<div class="posts-index-wrapper">
   <h1>THE BERGERIE</h1>
   <span> Le meilleur de l'élevage pop-culturel! </br> Depuis 2015 </span>
   <div class="index-posts-wrapper">
@@ -15,7 +15,7 @@
           <span class="post-user-posts"> <%= post.user.username.capitalize%> </span>
         </div>
         <div class="post-content-posts">
-          <%= raw post.content %>
+          <%= raw post.preview %>
         </div>
       </div>
     </div>
