--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -6,7 +6,10 @@
 /* CONTAINER STYLES */
 
 #static_pages {
-  background: linear-gradient( $pink-color, $yellow-color);
+  /*background: linear-gradient( $pink-color, $yellow-color);*/
+  background-image: url("bckg_pop.png");
+  background-attachment: fixed;
+  background-size: cover;
   padding-top: 14vh;
 }
 
