--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,7 +1,7 @@
 <%= @post.user.username %>
 <%= @post.title %>
 <%= @post.content %>
-<%= @post.category %>
+category
 
 <%= form_for(@post, html: {class: "post-form"}) do |f| %>
   <%= render 'layouts/error_messages' %>
@@ -9,14 +9,11 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
 
-  <%= f.label :category %>
-  <%= f.text_field :category %>
-
   <%= f.label :preview %>
   <%= f.text_field :preview %>
 
   <%= f.label :content %>
   <%= f.text_field :content %>
 
-  <%= f.submit "Créer mon article", class: "btn btn-primary" %>
+  <%= f.submit "Editer mon article", class: "btn btn-primary" %>
 <% end %>
