assets precompile + background color

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -6,8 +6,8 @@
 /* CONTAINER STYLES */
 
 #static_pages {
-  /*background: linear-gradient( $pink-color, $yellow-color);*/
-  background-image: url("bckg_pop.png");
+  background: linear-gradient( $pink-color, $yellow-color);
+  /*background-image: url("bckg_pop.png");*/
   background-attachment: fixed;
   background-size: cover;
   padding-top: 14vh;
