--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,13 +2,18 @@
 <%= form_for(@post, html: {class: "post-form"}) do |f| %>
   <%= render 'layouts/error_messages' %>
 
-  <%= f.label :title %>
+  <%= f.fields_for :categories do |category_form| %>
+      <%= category_form.label :Catégorie %>
+      <%= category_form.text_field :name %>
+  <% end %>
+    
+  <%= f.label :titre %>
   <%= f.text_field :title %>
 
   <%= f.label :preview %>
   <%= f.text_field :preview %>
 
-  <%= f.label :content %>
+  <%= f.label :contenu %>
   <%= f.text_field :content %>
     
   <%= f.submit "Créer mon article", class: "btn btn-primary" %>
