category added = basic tests

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,5 @@
 <div class="posts-index-wrapper">
+  Bienvenue sur le l'outil d'administration 
+  <li><%=link_to "Créer un nouveal article", new_post_path %></li>
   <%= render 'layouts/index' %>
 </div>
