--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,10 +2,8 @@
 <%= form_for(@post, html: {class: "post-form"}) do |f| %>
   <%= render 'layouts/error_messages' %>
 
-  <%= f.fields_for :categories do |category_form| %>
-      <%= category_form.label :Catégorie %>
-      <%= category_form.text_field :name %>
-  <% end %>
+  <%= f.label :catégorie %>
+  <%= f.select(:category_id, @category_options) %>
     
   <%= f.label :titre %>
   <%= f.text_field :title %>
