--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,19 +1,22 @@
 <%= @post.user.username %>
 <%= @post.title %>
-<%= @post.content %>
-category
+<%= @post.category.name %>
 
 <%= form_for(@post, html: {class: "post-form"}) do |f| %>
   <%= render 'layouts/error_messages' %>
 
-  <%= f.label :title %>
+  <%= f.label :catégorie %>
+  <%= f.select(:category_id, @category_options) %>
+    
+  <%= f.label :titre %>
   <%= f.text_field :title %>
 
   <%= f.label :preview %>
   <%= f.text_field :preview %>
 
-  <%= f.label :content %>
+  <%= f.label :contenu %>
   <%= f.text_field :content %>
-
   <%= f.submit "Editer mon article", class: "btn btn-primary" %>
 <% end %>
+
+<%= raw @post.content %>
