--- a/app/views/static_pages/cinema.html.erb
+++ b/app/views/static_pages/cinema.html.erb
@@ -1,3 +1,2 @@
 <% provide(:title, "Cinéma") %>
-<h1>StaticPages#cinema</h1>
-<p>Find me in app/views/static_pages/cinema.html.erb</p>
+<%= render 'layouts/category' %>
