--- a/app/views/static_pages/art_culture.html.erb
+++ b/app/views/static_pages/art_culture.html.erb
@@ -1,3 +1,2 @@
 <% provide(:title, "Art/Culture") %>
-<h1>StaticPages#art_culture</h1>
-<p>Find me in app/views/static_pages/art_culture.html.erb</p>
+<%= render 'layouts/category' %>
