--- a/app/views/static_pages/music.html.erb
+++ b/app/views/static_pages/music.html.erb
@@ -1,3 +1,2 @@
 <% provide(:title, "Musique") %>
-<h1>StaticPages#music</h1>
-<p>Find me in app/views/static_pages/music.html.erb</p>
+<%= render 'layouts/category' %>
