fixed backgound image url

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,5 +18,5 @@
  @import "global.scss";
  @import "static_pages.scss";
  @import "posts.scss";
- @import "postsshow.css";
+ @import "postsshow.scss";
  @import "devise.scss";
