--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
   <div class="social-nav-block">
     <div class="header-social">
       <ul class="header-list social-list">
-        <li>Suivez-nous!</a></li>
+        <li><a>Suivez-nous!</a></li>
         <li><a href="https://www.facebook.com/thebergerie.net"><i class="fab fa-facebook-f"></i></a></li>
         <li><a href="https://twitter.com/thebergerie"><i class="fab fa-twitter"></i></a></li>
         <li><a href="https://instagram.com/thebergerie"><i class="fab fa-instagram"></i></a></li>
