--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,18 +1,50 @@
-<h1>Publier un article</h1>
-<%= form_for(@post, html: {class: "post-form"}) do |f| %>
-  <%= render 'layouts/error_messages' %>
+<div class="posts-new-wrapper">
+  <h1>Publier un article</h1>
+  <%= form_for(@post, html: {class: "post-form"}) do |f| %>
+    <%= render 'layouts/error_messages' %>
 
-  <%= f.label :catégorie %>
-  <%= f.select(:category_id, @category_options) %>
-    
-  <%= f.label :titre %>
-  <%= f.text_field :title %>
+    <%= f.label :catégorie %>
+    <%= f.select(:category_id, @category_options) %>
+      
+    <%= f.label :titre %>
+    <%= f.text_field :title %>
 
-  <%= f.label :preview %>
-  <%= f.text_field :preview %>
+    <%= f.label :preview %>
+    <%= f.text_field :preview %>
 
-  <%= f.label :contenu %>
-  <%= f.text_field :content %>
-    
-  <%= f.submit "Créer mon article", class: "btn btn-primary" %>
-<% end %>
+    <%= f.label :contenu %>
+    <%= f.text_field :content %>
+      
+    <%= f.submit "Créer mon article", class: "btn btn-primary" %>
+  <% end %>
+
+  <div class="text-editor">
+    Editeur WYSIWYG (What you see is what you get) </br>
+    <input type="button" value="p" onclick="commande('');" ></code>
+    <select onchange="commande('heading', this.value); this.selectedIndex = 0;">
+      <option value="">Titre</option>
+      <option value="h1">H1</option>
+      <option value="h2">H2</option>
+      <option value="h3">H3</option>
+    </select>
+    <input type="button" value="G" style="font-weight:bold;" onclick="commande('bold');" ></code>
+    <input type="button" value="I" onclick="commande('italic');"></code>
+    <input type="button" value="S" onclick="commande('underline');"></code>
+    <input type="button" value="UL" onclick="commande('insertUnorderedList');" ></code>
+    <input type="button" value="OL" onclick="commande('insertOrderedList');" ></code>
+    <input type="button" value="Quote" onclick="commande('formatBlock');" ></code>
+    <input type="button" value="AG" onclick="commande('justifyLeft');" ></code>
+    <input type="button" value="AD" onclick="commande('justifyRight');" ></code>
+    <input type="button" value="C" onclick="commande('justifyCenter');" ></code>
+    <input type="button" value="Just" onclick="commande('justifyFull');" ></code>
+    <input type="button" value="Lien" onclick="commande('createLink');" ></code>
+    <input type="button" value="Image" onclick="commande('insertImage');" ></code>
+    <input type="button" value="Undo" onclick="commande('undo');" ></code>
+    <div id="text-editor-input" contentEditable> </div>
+  </div>
+
+  <div class="text-editor">
+    <input type="button" value="Obtenir le HTML" onclick="resultat();"> </code><br />
+    <textarea id="text-editor-output"></textarea>
+  </div>
+</div>
