--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,21 +2,24 @@
 <%= @post.title %>
 <%= @post.category.name %>
 
-<%= form_for(@post, html: {class: "post-form"}) do |f| %>
-  <%= render 'layouts/error_messages' %>
+<div class="posts-new-wrapper">
+  <%= form_for(@post, html: {class: "post-form"}) do |f| %>
+    <%= render 'layouts/error_messages' %>
 
-  <%= f.label :catégorie %>
-  <%= f.select(:category_id, @category_options) %>
-    
-  <%= f.label :titre %>
-  <%= f.text_field :title %>
+    <%= f.label :catégorie %>
+    <%= f.select(:category_id, @category_options) %>
+      
+    <%= f.label :titre %>
+    <%= f.text_field :title %>
 
-  <%= f.label :preview %>
-  <%= f.text_field :preview %>
+    <%= f.label :preview %>
+    <%= f.text_field :preview %>
 
-  <%= f.label :contenu %>
-  <%= f.text_field :content %>
-  <%= f.submit "Editer mon article", class: "btn btn-primary" %>
-<% end %>
+    <%= f.label :contenu %>
+    <%= f.text_field :content %>
+    <%= f.submit "Editer mon article", class: "btn btn-primary" %>
+  <% end %>
+  <%= render 'layouts/text_editor' %>
+</div>
 
 <%= raw @post.content %>
