--- a/app/assets/stylesheets/postsshow.scss
+++ b/app/assets/stylesheets/postsshow.scss
@@ -1,6 +1,32 @@
-.posts-global-wrapper {
+.posts-show-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 5vh 5vw;
+  width: 100%;
+  box-sizing: border-box;
+  h1 {
+    font-size: 21px;
+  }
+}
+
+%postshowlayout {
+  font-family: 'Open Sans', helvetica, sans-serif;
+  text-align: justify;
+  font-size: 13px;
+  line-height: 1.5;
+  width: 100%;
+}
+.post-preview-content {
+  @extend %postshowlayout;
+  font-weight: bold;
+  margin: 2vh 0vw;
+}
+
+.post-content-posts {
+  @extend %postshowlayout;
+  img {
+    width: 100%;
+    height: auto;
+  }
 }
