--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,30 @@
 <% provide(:title, "") %>
-<div class="posts-home-wrapper">
-  <%= render 'layouts/index' %>
+<div class="body-index-container">
+  <div class="posts-home-wrapper">
+    <h1>THE BERGERIE</h1>
+    <span> Le meilleur de l'élevage pop-culturel! </br> Depuis 2015 </span>
+    <div class="index-posts-wrapper">
+      <% @posts.each do |post|%>
+      <div class="index-posts">
+        <div class="thumbnails-posts">
+          <%= image_tag("noxo.png", alt: "Noxorae") %>
+        </div>
+        <div class="info-posts">
+          <span class="post-category-posts"> <%= post.category.name%> </span>
+          <h2> <%= post.title %> </h2>
+          <div class="post-date-user-posts">
+            <span class="post-date-posts"> <%= post.created_at.to_date.strftime("%d-%m-%Y") %> </span>
+            <span class="post-user-posts"> <%= post.user.username.capitalize%> </span>
+          </div>
+          <div class="post-preview-posts">
+            <%= raw post.preview %>
+          </div>
+          <div class="post-show-button">
+            <%= link_to "Lire la suite", article_path(post)%>
+          </div>
+        </div>
+      </div>
+      <% end %>
+    </div>
+  </div>
 </div>
